<resources>
    <string name="app_name">WF</string>
    <string name="home">Home</string>
    <string name="languages">Languages</string>
    <string name="results">Results</string>
    <string name="mainFragment_label">Main</string>
    <string name="languagesFragment_label">Languages</string>
    <string name="resultsFragment_label">Results</string>
    <string name="ToolbarTitle">WikiFilter</string>
    <string name="query_input">Type to translate</string>
    <string name="tv_main_language_default">main language</string>
    <string name="tv_foreign_language_default">foreign language(s)</string>
    <string name="actv_hint">Translate</string>
    <string name="bn_confirm_text">OK</string>
</resources>