<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_main_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tv_main_language_default"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_foreign_languages"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tv_foreign_language_default"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibn_arrow_down" />

    <!--        style="@style/Widget.App.Button.IconOnly"-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/ibn_arrow_down"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:insetLeft="0dp"
        android:insetRight="0dp"
        android:padding="0dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_main_language"
        app:icon="@drawable/ic_circled_arrow_down_filled"
        app:iconSize="48dp"
        app:iconTint="@android:color/black"
        app:iconGravity="textStart" />

    <!--        style="@style/Widget.App.Button.IconOnly"-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/ibn_arrow_up"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:background="@android:color/transparent"
        android:insetLeft="0dp"
        android:insetRight="0dp"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/ibn_arrow_down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ibn_arrow_down"
        app:icon="@drawable/ic_circled_arrow_up_empty"
        app:iconSize="48dp"
        app:iconTint="@android:color/black"
        app:iconGravity="textStart" />

    <AutoCompleteTextView
        android:id="@+id/actv_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/actv_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bn_confirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_foreign_languages"
        app:layout_constraintVertical_bias="0.156" />

    <Button
        android:id="@+id/bn_confirm"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/bn_confirm_text"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/actv_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/actv_input" />

</androidx.constraintlayout.widget.ConstraintLayout>